--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --reporter spec",
-    "console": "node index.cli.js"
+    "console": "node interact.js"
   },
   "repository": {
     "type": "git",
